Fix light/dark mode support
Needed both on the embedding iframe and root internal element. This to avoid opaque background from the browser, that broke our rounded corners.

--- a/src/client/css/base.css
+++ b/src/client/css/base.css
@@ -23,6 +23,15 @@ body {
   box-sizing: border-box;
 }
 
+html {  
+  /**
+   * Light/Dark mode support
+   * Use light-dark() function to get colors based on the current theme.
+   * Example: color: light-dark(black, white);
+   */
+  color-scheme: light dark;
+}
+
 /* Hide native cast button */
 tidal-video-view video::-internal-media-controls-overlay-cast-button {
   display: none;
@@ -359,13 +368,6 @@ tidal-progress-bar {
 }
 
 .embed-player {
-  /**
-   * Light/Dark mode support
-   * Use light-dark() function to get colors based on the current theme.
-   * Example: color: light-dark(black, white);
-   */
-  color-scheme: light dark;
-
   &.tidal-hide {
     opacity: 1;
   }
